# PyDevNS

./: .bumpversion.cfg  .travis.yml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
devns/: __init__.py  __main__.py  cli.py  config.py  dns.py  server.py
tests/: conftest.py  fixtures.py  test_cli.py  test_config.py  test_devns.py  test_dns.py  test_server.py
