[metadata]
name = devns
version = attr: devns.__version__
author = Dave Hayes
author_email = dwhayes@gmail.com
description = Pure Python DNS server for developers
long_description = file: README.rst
keywords = dns
license = MIT License
url = https://github.com/daveisadork/PyDevNS
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Internet :: Name Service (DNS)
    Topic :: Software Development
    Topic :: System
    Topic :: System :: Networking
    Topic :: Utilities

[options]
zip_safe = True
packages = devns
setup_requires = pytest-runner
tests_require = 
    pytest>=3.0
    pytest-cov>=2.4

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
python_paths = .
norecursedirs = .git
addopts = --cov devns --cov-report term

[flake8]
exclude = docs/*
ignore = F403
max-complexity = 12
max-line-length = 110
